# Routi

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
